--- a/pycolmap_adapted.ipynb
+++ b/pycolmap_adapted.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "CeL5x1beYrtX",
    "metadata": {
     "colab": {
@@ -21,14 +21,29 @@
     "id": "CeL5x1beYrtX",
     "outputId": "93690e27-2077-425d-a215-7d1520dd22bc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pycolmap==3.10.0 in /Users/carterweaver/envs/18794/lib/python3.11/site-packages (3.10.0)\n",
+      "Requirement already satisfied: numpy in /Users/carterweaver/envs/18794/lib/python3.11/site-packages (from pycolmap==3.10.0) (2.1.1)\n",
+      "Requirement already satisfied: kornia in /Users/carterweaver/envs/18794/lib/python3.11/site-packages (0.7.4)\n",
+      "Requirement already satisfied: kornia-rs>=0.1.0 in /Users/carterweaver/envs/18794/lib/python3.11/site-packages (from kornia) (0.1.7)\n",
+      "Requirement already satisfied: packaging in /Users/carterweaver/envs/18794/lib/python3.11/site-packages (from kornia) (24.1)\n",
+      "Requirement already satisfied: torch>=1.9.1 in /Users/carterweaver/envs/18794/lib/python3.11/site-packages (from kornia) (2.4.1)\n",
+      "Requirement already satisfied: filelock in /Users/carterweaver/envs/18794/lib/python3.11/site-packages (from torch>=1.9.1->kornia) (3.16.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in /Users/carterweaver/envs/18794/lib/python3.11/site-packages (from torch>=1.9.1->kornia) (4.12.2)\n",
+      "Requirement already satisfied: sympy in /Users/carterweaver/envs/18794/lib/python3.11/site-packages (from torch>=1.9.1->kornia) (1.13.3)\n",
+      "Requirement already satisfied: networkx in /Users/carterweaver/envs/18794/lib/python3.11/site-packages (from torch>=1.9.1->kornia) (3.3)\n",
+      "Requirement already satisfied: jinja2 in /Users/carterweaver/envs/18794/lib/python3.11/site-packages (from torch>=1.9.1->kornia) (3.1.4)\n",
+      "Requirement already satisfied: fsspec in /Users/carterweaver/envs/18794/lib/python3.11/site-packages (from torch>=1.9.1->kornia) (2024.9.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/carterweaver/envs/18794/lib/python3.11/site-packages (from jinja2->torch>=1.9.1->kornia) (2.1.5)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /Users/carterweaver/envs/18794/lib/python3.11/site-packages (from sympy->torch>=1.9.1->kornia) (1.3.0)\n"
+     ]
+    }
+   ],
    "source": [
-    "!pip install pycolmap==3.10.0\n",
-    "!git clone --quiet --recursive https://github.com/cjdwd/Hierarchical-Localization/\n",
-    "%cd Hierarchical-Localization\n",
-    "!pip install --progress-bar off --quiet -e .\n",
-    "!pip install --progress-bar off --quiet --upgrade plotly\n",
-    "!pip uninstall pycolamp\n",
     "!pip install pycolmap==3.10.0\n",
     "!pip install kornia"
    ]
@@ -47,6 +62,9 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "from pathlib import Path\n",
+    "import pycolmap\n",
+    "print(pycolmap.__version__)\n",
     "# os.chdir('Hierarchical-Localization/')\n",
     "!pwd"
    ]
@@ -80,10 +98,10 @@
    },
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
+    "import tqdm, tqdm.notebook\n",
+    "tqdm.tqdm = tqdm.notebook.tqdm\n",
     "\n",
-    "from pathlib import Path\n",
+    "from DeepUWSFM.utils import viz, viz_3d\n",
     "from DeepUWSFM import (\n",
     "    feature_extractor, dense_matcher, feature_matcher, pairing\n",
     ")"
@@ -92,37 +110,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dx5S9InWSbf",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "1dx5S9InWSbf",
-    "outputId": "261a823a-2c48-44d2-88dc-36073c806090"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.10.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "import tqdm, tqdm.notebook\n",
-    "tqdm.tqdm = tqdm.notebook.tqdm  # notebook-friendly progress bars\n",
-    "from pathlib import Path\n",
-    "\n",
-    "# from hloc.visualization import plot_images, read_image\n",
-    "from DeepUWSFM.utils import viz, viz_3d\n",
-    "import pycolmap\n",
-    "print(pycolmap.__version__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
    "id": "q5E1wr3gEjEq",
    "metadata": {
     "id": "q5E1wr3gEjEq"
@@ -138,7 +125,6 @@
     "features = outputs / 'features.h5'\n",
     "matches = outputs / 'matches.h5'\n",
     "\n",
-    "# retrieval_conf = extract_features.confs[\"netvlad\"]\n",
     "feature_conf = feature_extractor.configs[\"superpoint\"]\n",
     "dense_conf = dense_matcher.confs['loftr']\n",
     "matcher_conf = feature_matcher.confs[\"superglue\"]"
@@ -164,7 +150,7 @@
     "\n",
     "feature_extractor.extract_features(feature_conf, images, img_list=references, feat_path=features)\n",
     "pairing.main(sfm_pairs, image_list=references)\n",
-    "feature_matcher.main(matcher_conf, sfm_pairs, features=features, matches=matches);\n",
+    "feature_matcher.main(matcher_conf, sfm_pairs, features=features, matches=matches)\n",
     "\n",
     "features_loftr, matches_loftr = dense_matcher.main(dense_conf, sfm_pairs, images, export_dir=outputs)\n",
     "\n",
