--- a/pycolmap_adapted.ipynb
+++ b/pycolmap_adapted.ipynb
@@ -60,7 +60,14 @@
    },
    "outputs": [],
    "source": [
-    "!git clone --quiet --recursive https://github.com/ikotecha/18794-Project"
+    "# For experiments in Colab (for gpu)\n",
+    "!git clone --quiet --recursive https://github.com/ikotecha/18794-Project\n",
+    "\n",
+    "from Project.DeepUWSFM.utils import viz, viz_3d\n",
+    "from Project.DeepUWSFM.utils.io import read_image\n",
+    "from Project.DeepUWSFM import (\n",
+    "    feature_extractor, dense_matcher, feature_matcher, pairing\n",
+    ")"
    ]
   },
   {
