--- a/pycolmap_adapted.ipynb
+++ b/pycolmap_adapted.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "Kjd0e3G0ECqx",
    "metadata": {
     "colab": {
@@ -103,8 +103,8 @@
    "source": [
     "images = Path(\"images\")\n",
     "\n",
-    "outputs = Path(\"outputs_new\")\n",
-    "sfm_pairs = outputs / \"pairs-netvlad.txt\"\n",
+    "outputs = Path(\"outputs\")\n",
+    "sfm_pairs = outputs / \"pairs.txt\"\n",
     "sfm_dir = outputs / \"sfm_superpoint+superglue\"\n",
     "sfm_dir = outputs / 'sfm'\n",
     "features = outputs / 'features.h5'\n",
@@ -134,12 +134,20 @@
     "viz.plot_images([read_image(images / r) for r in references], dpi=25)\n",
     "\n",
     "feature_extractor.extract_features(feature_conf, images, img_list=references, feat_path=features)\n",
-    "pairing.main(sfm_pairs, image_list=references)\n",
-    "feature_matcher.main(matcher_conf, sfm_pairs, features=features, matches=matches)\n",
+    "pairing.main(sfm_pairs, imgs=references)\n",
+    "feature_matcher.match_from_paths(matcher_conf, sfm_pairs, feature_path_q=features, match_path=matches)\n",
     "\n",
-    "features_loftr, matches_loftr = dense_matcher.main(dense_conf, sfm_pairs, images, export_dir=outputs)\n",
-    "\n",
-    "model = reconstruction.main(sfm_dir, images, sfm_pairs, features_loftr, matches_loftr, image_list=references)"
+    "features_loftr, matches_loftr = dense_matcher.main(dense_conf, sfm_pairs, images, export_dir=outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98f73fac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reconstructions = pycolmap.incremental_mapping(str(matches_loftr), str(images), sfm_dir / \"models\")"
    ]
   },
   {
