--- a/pycolmap_adapted.ipynb
+++ b/pycolmap_adapted.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "UwcW1ludNght",
    "metadata": {
     "colab": {
@@ -58,7 +58,19 @@
     "id": "UwcW1ludNght",
     "outputId": "4867e685-7e67-4e6c-aeff-48f06c8fb012"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Project'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[28], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# For experiments in Colab (for gpu)\u001b[39;00m\n\u001b[1;32m      2\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39msystem(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgit clone --quiet --recursive https://github.com/ikotecha/18794-Project\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mProject\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mDeepUWSFM\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m viz, viz_3d\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mProject\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mDeepUWSFM\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m read_image\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mProject\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mDeepUWSFM\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      7\u001b[0m     feature_extractor, dense_matcher, feature_matcher, pairing, triangulation, reconstruction\n\u001b[1;32m      8\u001b[0m )\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Project'"
+     ]
+    }
+   ],
    "source": [
     "# For experiments in Colab (for gpu)\n",
     "!git clone --quiet --recursive https://github.com/ikotecha/18794-Project\n",
@@ -66,13 +78,13 @@
     "from Project.DeepUWSFM.utils import viz, viz_3d\n",
     "from Project.DeepUWSFM.utils.io import read_image\n",
     "from Project.DeepUWSFM import (\n",
-    "    feature_extractor, dense_matcher, feature_matcher, pairing\n",
+    "    feature_extractor, dense_matcher, feature_matcher, pairing, triangulation, reconstruction\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "Kjd0e3G0ECqx",
    "metadata": {
     "colab": {
@@ -88,7 +100,7 @@
     "\n",
     "from DeepUWSFM.utils import viz, viz_3d\n",
     "from DeepUWSFM import (\n",
-    "    feature_extractor, dense_matcher, feature_matcher, pairing\n",
+    "    feature_extractor, dense_matcher, feature_matcher, pairing, triangulation, reconstruction\n",
     ")"
    ]
   },
