fix reconstruction, no logger

--- a/pycolmap_adapted.ipynb
+++ b/pycolmap_adapted.ipynb
@@ -154,12 +154,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "98f73fac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'features_loftr' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[35], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m reconstruction\u001b[38;5;241m.\u001b[39mmain(sfm_dir, images, sfm_pairs, \u001b[43mfeatures_loftr\u001b[49m, matches_loftr, image_list\u001b[38;5;241m=\u001b[39mreferences)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(model\u001b[38;5;241m.\u001b[39msummary())\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'features_loftr' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "reconstructions = pycolmap.incremental_mapping(str(matches_loftr), str(images), sfm_dir / \"models\")"
+    "model = reconstruction.main(sfm_dir, images, sfm_pairs, features_loftr, matches_loftr, image_list=references)\n",
+    "print(model.summary())"
    ]
   },
   {
