--- a/pycolmap_adapted.ipynb
+++ b/pycolmap_adapted.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "UwcW1ludNght",
    "metadata": {
     "colab": {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "id": "Kjd0e3G0ECqx",
    "metadata": {
     "colab": {
@@ -100,7 +100,7 @@
     "\n",
     "from DeepUWSFM.utils import viz, viz_3d\n",
     "from DeepUWSFM import (\n",
-    "    feature_extractor, dense_matcher, feature_matcher, pairing, triangulation, reconstruction\n",
+    "    feature_extractor, dense_matcher, feature_matcher, pairing, pycolmap_db, reconstruct\n",
     ")"
    ]
   },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "98f73fac",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
     }
    ],
    "source": [
-    "model = reconstruction.main(sfm_dir, images, sfm_pairs, features_loftr, matches_loftr, image_list=references)\n",
+    "model = reconstruct.main(sfm_dir, images, sfm_pairs, features_loftr, matches_loftr, image_list=references)\n",
     "print(model.summary())"
    ]
   },
