--- a/pycolmap_adapted.ipynb
+++ b/pycolmap_adapted.ipynb
@@ -58,19 +58,7 @@
     "id": "UwcW1ludNght",
     "outputId": "4867e685-7e67-4e6c-aeff-48f06c8fb012"
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'Project'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[28], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# For experiments in Colab (for gpu)\u001b[39;00m\n\u001b[1;32m      2\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39msystem(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgit clone --quiet --recursive https://github.com/ikotecha/18794-Project\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mProject\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mDeepUWSFM\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m viz, viz_3d\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mProject\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mDeepUWSFM\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m read_image\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mProject\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mDeepUWSFM\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      7\u001b[0m     feature_extractor, dense_matcher, feature_matcher, pairing, triangulation, reconstruction\n\u001b[1;32m      8\u001b[0m )\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Project'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# For experiments in Colab (for gpu)\n",
     "!git clone --quiet --recursive https://github.com/ikotecha/18794-Project\n",
@@ -84,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "id": "Kjd0e3G0ECqx",
    "metadata": {
     "colab": {
@@ -100,13 +88,13 @@
     "\n",
     "from DeepUWSFM.utils import viz, viz_3d\n",
     "from DeepUWSFM import (\n",
-    "    feature_extractor, dense_matcher, feature_matcher, pairing, pycolmap_db, reconstruct\n",
+    "    feature_extractor, dense_matcher, feature_matcher, pairing, pycolmap_db, reconstruct, config\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "id": "q5E1wr3gEjEq",
    "metadata": {
     "id": "q5E1wr3gEjEq"
@@ -122,9 +110,9 @@
     "features = outputs / 'features.h5'\n",
     "matches = outputs / 'matches.h5'\n",
     "\n",
-    "feature_conf = feature_extractor.configs[\"superpoint\"]\n",
-    "dense_conf = dense_matcher.confs['loftr']\n",
-    "matcher_conf = feature_matcher.confs[\"superglue\"]"
+    "feature_conf = config.configs[\"superpoint\"]\n",
+    "dense_conf = config.configs['loftr']\n",
+    "matcher_conf = config.configs[\"superglue\"]"
    ]
   },
   {
@@ -157,19 +145,7 @@
    "execution_count": null,
    "id": "98f73fac",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'features_loftr' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[35], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m reconstruction\u001b[38;5;241m.\u001b[39mmain(sfm_dir, images, sfm_pairs, \u001b[43mfeatures_loftr\u001b[49m, matches_loftr, image_list\u001b[38;5;241m=\u001b[39mreferences)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(model\u001b[38;5;241m.\u001b[39msummary())\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'features_loftr' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = reconstruct.main(sfm_dir, images, sfm_pairs, features_loftr, matches_loftr, image_list=references)\n",
     "print(model.summary())"
